[package]
name = "spotifav"
version = "0.1.0"
edition = "2021"
description = "An incredibly simple tool that adds/removes the currently playing track to favorites."
license = "GPL-3.0"
authors = ["Lorenzo Bodini <lb@prabo.org>"]
repository = "https://github.com/topongo/spotifav"

[dependencies]
rspotify = "0.13.3"
tokio = { version = "1.40", features = ["full"] }
open = "5.3.0"
serde = { version = "^1.0", features = ["derive"] }
toml = "0.8.19"
directories = "5.0.1"

[[bin]]
name = "spotifav"
path = "src/bin.rs"
